--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
         <!-- Header Section -->
  <div class="Header"> Header Logo
+   <div class="Header-extra-box">
     <div class="Header-extra"> Part 1</div>
     <div class="Header-extra"> Part 2</div>
     <div class="Header-extra"> Part 3</div>
+   </div>
  </div>
 
         <!-- Hero Section -->
