--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button class="sign">Sign Up</button>
         </div>
 
-        <div class="Hero-image"> <img src="" alt="Image placeholder"></div>
+        <div class="Hero-image"> <img src="../Landing-Page/images/pexels-gramily-20248687.jpg" alt="Image placeholder"></div>
     </div>
 
         <!-- Second Body Section -->
