Secondary body structured and index file modified to include header text for this section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
     </div>
 
         <!-- Second Body Section -->
+    <div class="secondary-title">
+        <h1>Some random information</h1>
+    </div>
+
     <div class="Secondary">
+
+       
+
         <div class="image-box">
             <img src="" alt="Image placeholder">
             <p> this is some subtext under an illustration of image</p>
