Stylize Header and Hero body

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body>
         <!-- Header Section -->
- <div class="Header"> Header Logo
+ <div class="Header"> 
+   <div class="header-logo">
+    <h1 >Header Logo</h1>
+   </div>
+
    <div class="Header-extra-box">
     <div class="Header-extra"> Part 1</div>
     <div class="Header-extra"> Part 2</div>
@@ -21,9 +25,9 @@
         <!-- Hero Section -->
     <div class="Hero">
         <div class="Hero-Text">
-            <h1>This Website is Awesome</h1>
-            <p> This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button class="sign">Sign Up</button>
+            <h1 id="Hero-main-text">This Website is Awesome</h1>
+            <p id="Hero-secondary-text"> This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button id="hero-sign">Sign Up</button>
         </div>
 
         <div class="Hero-image"> <img src="../Landing-Page/images/pexels-gramily-20248687.jpg" alt="Image placeholder"></div>
