Modified image parameters and stylizing Secondary body

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button id="hero-sign">Sign Up</button>
         </div>
 
-        <div class="Hero-image"> <img src="../Landing-Page/images/pexels-gramily-20248687.jpg" alt="Image placeholder"></div>
+        <div class="Hero-image"> <img src="../Landing-Page/images/fantasy-8297567_640.png" alt="Image placeholder"></div>
     </div>
 
         <!-- Second Body Section -->
@@ -40,28 +40,26 @@
 
     <div class="Secondary">
 
-       
-
         <div class="image-box">
-            <img src="" alt="Image placeholder">
-            <p> this is some subtext under an illustration of image</p>
+            <img src="../Landing-Page/images/fantasy-8297567_640.png" alt="Image placeholder">
+            <p id="image-p"> this is some subtext under an illustration of image</p>
         </div>
 
         <div class="image-box">
-            <img src="" alt="Image placeholder">
-            <p> this is some subtext under an illustration of image</p>
-        </div>
-
-
-        <div class="image-box">
-            <img src="" alt="Image placeholder">
-            <p> this is some subtext under an illustration of image</p>
+            <img src="../Landing-Page/images/fantasy-8297567_640.png" alt="Image placeholder">
+            <p id="image-p"> this is some subtext under an illustration of image</p>
         </div>
 
 
         <div class="image-box">
-            <img src="" alt="Image placeholder">
-            <p> this is some subtext under an illustration of image</p>
+            <img src="../Landing-Page/images/fantasy-8297567_640.png" alt="Image placeholder">
+            <p id="image-p"> this is some subtext under an illustration of image</p>
+        </div>
+
+
+        <div class="image-box">
+            <img src="../Landing-Page/images/fantasy-8297567_640.png" alt="Image placeholder">
+            <p id="image-p"> this is some subtext under an illustration of image</p>
         </div>
     </div>
 
