Change button style and font style for Quatenary body and modified structure

--- a/index.html
+++ b/index.html
@@ -67,16 +67,17 @@
     <div class="Tertiary">
         <div class="inspiration-quote"><em>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who Knows? All I know it that is looks nice.</em></div>
         
-        <div class="quote-author"><strong>Thor, God of Thunder</strong></div>
+        <div class="quote-author"><strong>- Thor, God of Thunder</strong></div>
     </div>
 
             <!-- Quaternary Body Section -->
     <div class="Quaternary">
-        <div class="Quaternary-text"> Call to action! It's time!
-        <p id="QP1">Sign up for our product by clicking that button right over there!</p>
+        <div class="Quaternary-text"> 
+        <h2 id="QH1">Call to action! It's time!</h2>
+        <p id="QP2">Sign up for our product by clicking that button right over there!</p>
         </div>
 
-        <div class="Quaternary-button"> <button>Sign Up</button></div>
+        <div><button id="Quaternary-button">Sign Up</button></div>
     </div>
 
         <!-- Footer Section -->
