Style Footer and add finishing touches to images and overall structure

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <button id="hero-sign">Sign Up</button>
         </div>
 
-        <div class="Hero-image"> <img src="../Landing-Page/images/fantasy-8297567_640.png" alt="Image placeholder"></div>
+        <div class="Hero-image"> <img id="hero-image-specific" src="../Landing-Page/images/fantasy-8297567_640.png" alt="Image placeholder"></div>
     </div>
 
         <!-- Second Body Section -->
     <div class="secondary-title">
-        <h1>Some random information</h1>
+        <h1>Some random information.</h1>
     </div>
 
     <div class="Secondary">
